Se arregla bug de la version mobile

--- a/css/products.css
+++ b/css/products.css
@@ -457,8 +457,8 @@ footer p:nth-of-type(2) {
         justify-self: center;
         border-radius: 5px;
         box-shadow: var(--box-shadow);
-        margin: 50px;
-        margin-right: 20px;
+        margin: 1em auto;
+        margin-right: 0;
     }
     
     .container .presentation h1 {
